# budget-pipeline

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: schema-guard.yml  schema_guard.yml
cpp/include/engine/: Engine.h  engine.h
cpp/include/event_model/: transaction_event_v1.h
cpp/src/engine/: Engine.cpp  engine.cpp
cpp/src/event_model/: transaction_event_v1.cpp
docs/event_model/: transaction_event.md
docs/event_model/.github/: pull_request_template.md
docs/event_model/transaction_event/: v1.md
python/: bindings.cpp
python/event_model/: transaction_event_v1.py
testdata/events/: transaction_event_v1.json
